--- a/gallery.html
+++ b/gallery.html
@@ -16,31 +16,33 @@
         <h1 class="gallery-text">Gallery</h1>
         <p class="scroll-text"> Scroll &darr; </p>
         <nav id="nav" class="invisible">
-            <div class="top-bar">
-                <div class="logo">
-                    Iqbal Photography
+            <div class="top-bar-desktop">
+                <div class="top-bar">
+                    <div class="logo">
+                        Iqbal Photography
+                    </div>
+                    <div class="bar-container" onclick="menuReveal(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
                 </div>
-                <div class="bar-container" onclick="menuReveal(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                </div>
-            </div>
-            <div id="menu-items" class="hidden">
-                <div id="close-menu"  onclick="hideMenu()">
-                    X
-                </div>
-                <div>
-                    <a onclick="hideMenu()" href="#about">About</a>
-                </div>
-                <div>
-                    <a onclick="hideMenu()" href="#gallery">Gallery</a>
-                </div>
-                <div>
-                    <a onclick="hideMenu()" href="#contact">Contact</a>
-                </div>
-                <div class="instagram-link">
-                    <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                <div id="menu-items" class="hidden">
+                    <div id="close-menu"  onclick="hideMenu()">
+                        X
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#about">About</a>
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#gallery">Gallery</a>
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="#contact">Contact</a>
+                    </div>
+                    <div class="instagram-link">
+                        <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </nav>
