fixed gallery section for desktop

--- a/test.html
+++ b/test.html
@@ -31,8 +31,11 @@
                         X
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#about">About</a>
+                        <a onclick="hideMenu()" href="#about">Home</a>
                     </div>
+                    <div>
+                            <a onclick="hideMenu()" href="#about">About</a>
+                        </div>
                     <div>
                         <a onclick="hideMenu()" href="#gallery">Gallery</a>
                     </div>
