nvm no transparent nav.Fixed some nav js

--- a/test.html
+++ b/test.html
@@ -27,23 +27,23 @@
                     </div>
                 </div>
                 <div id="menu-items" class="hidden">
-                    <div id="close-menu"  onclick="hideMenu()">
+                    <div id="close-menu"  onclick="menuReveal()">
                         X
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#about">Home</a>
+                        <a onclick="menuReveal()" href="#about">Home</a>
                     </div>
                     <div>
-                            <a onclick="hideMenu()" href="#about">About</a>
+                            <a onclick="menuReveal()" href="#about">About</a>
                         </div>
                     <div>
-                        <a onclick="hideMenu()" href="#gallery">Gallery</a>
+                        <a onclick="menuReveal()" href="#gallery">Gallery</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#contact">Contact</a>
+                        <a onclick="menuReveal()" href="#contact">Contact</a>
                     </div>
                     <div class="instagram-link">
-                        <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                        <a onclick="menuReveal()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
