--- a/gallery.html
+++ b/gallery.html
@@ -32,13 +32,16 @@
                         X
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#about">About</a>
+                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com">Home</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#gallery">Gallery</a>
+                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#about">About</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="#contact">Contact</a>
+                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+                    </div>
+                    <div>
+                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#contact">Contact</a>
                     </div>
                     <div class="instagram-link">
                         <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
@@ -54,10 +57,10 @@
     <footer>
             <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
             <div class="footer-links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#gallery">Gallery</a>
-                <a href="#contact">Contact</a>
+                <a href="http://iqbalphotographynyc.com">Home</a>
+                <a href="http://iqbalphotographynyc.com/#about">About</a>
+                <a href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+                <a href="http://iqbalphotographynyc.com/#contact">Contact</a>
            </div>
         </footer>
         
