--- a/test.html
+++ b/test.html
@@ -52,7 +52,13 @@
 
     <section id="about">
         <h1>About</h1>
-        <p id="about-text"> </p>
+        <div class="about-grid">
+            <div id="slideshowImg" class="hidden">
+            </div>
+            <div>
+                <p id="about-text"> </p>
+            </div>
+        </div>
     </section>
 
     <section id="gallery">
