--- a/gallery.html
+++ b/gallery.html
@@ -28,23 +28,23 @@
                     </div>
                 </div>
                 <div id="menu-items" class="hidden">
-                    <div id="close-menu"  onclick="hideMenu()">
+                    <div id="close-menu"  onclick="menuReveal()">
                         X
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com">Home</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com">Home</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#about">About</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#about">About</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
                     </div>
                     <div>
-                        <a onclick="hideMenu()" href="http://iqbalphotographynyc.com/#contact">Contact</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#contact">Contact</a>
                     </div>
                     <div class="instagram-link">
-                        <a onclick="hideMenu()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
+                        <a onclick="menuReveal()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -55,14 +55,14 @@
     <div id="official-gallery"> </div>
 
     <footer>
-            <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
-            <div class="footer-links">
-                <a href="http://iqbalphotographynyc.com">Home</a>
-                <a href="http://iqbalphotographynyc.com/#about">About</a>
-                <a href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
-                <a href="http://iqbalphotographynyc.com/#contact">Contact</a>
-           </div>
-        </footer>
+        <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
+        <div class="footer-links">
+            <a href="http://iqbalphotographynyc.com">Home</a>
+            <a href="http://iqbalphotographynyc.com/#about">About</a>
+            <a href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+            <a href="http://iqbalphotographynyc.com/#contact">Contact</a>
+        </div>
+    </footer>
         
     <script src="javascript/nav.js"></script>
     <script src="javascript/gallery.js"></script>
