--- a/test.html
+++ b/test.html
@@ -31,16 +31,16 @@
                         X
                     </div>
                     <div>
-                        <a onclick="menuReveal()" href="#about">Home</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com">Home</a>
                     </div>
                     <div>
-                            <a onclick="menuReveal()" href="#about">About</a>
-                        </div>
-                    <div>
-                        <a onclick="menuReveal()" href="#gallery">Gallery</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#about">About</a>
                     </div>
                     <div>
-                        <a onclick="menuReveal()" href="#contact">Contact</a>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+                    </div>
+                    <div>
+                        <a onclick="menuReveal()" href="http://iqbalphotographynyc.com/#contact">Contact</a>
                     </div>
                     <div class="instagram-link">
                         <a onclick="menuReveal()" href="https://www.instagram.com/iqbalphotography/">Follow us! <i class="fa fa-instagram"></i></a>
@@ -90,11 +90,11 @@
     <footer>
         <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
         <div class="footer-links">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#contact">Contact</a>
-       </div>
+            <a href="http://iqbalphotographynyc.com">Home</a>
+            <a href="http://iqbalphotographynyc.com/#about">About</a>
+            <a href="http://iqbalphotographynyc.com/#gallery">Gallery</a>
+            <a href="http://iqbalphotographynyc.com/#contact">Contact</a>
+        </div>
     </footer>
 
     <script src="javascript/nav.js"></script>
