added faceicon and put contact-info in js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Iqbal Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/camera-icon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/nav-footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -70,7 +71,7 @@
         <div class="contact-grid">
             <div>
                 <p><b>Interested? Lets Talk!</b></p>
-                <p id="contact-info-desktop" class="hidden">We offer a wide range of different packages for all types of events. If you want the moment to be captured so you can have a reminder of it forever, we'll be there! </p>
+                <p id="contact-info-desktop" class="hidden"> </p>
             </div>
             <div>
                 <form name="contactForm" action="mailto:iqbalphotography@gmail.com" method="post" enctype="text/plain" onsubmit="return contactFunction()">
