--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/camera-icon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/nav-footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/gallery.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
