--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="bar3"></div>
                     </div>
                 </div>
-                <div id="menu-items" class="hidden">
+                <div id="menu-items">
                     <div id="close-menu"  onclick="menuReveal()">
                         X
                     </div>
