--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <div>
                 <form name="contactForm" action="mailto:iqbalphotography@gmail.com" method="post" enctype="text/plain" onsubmit="return contactFunction()">
                 <em>Name:</em><br>
-                <input class="inputs" type="text" name="name" required><br>
+                <input type="text" name="name" required><br>
                 <em>E-mail:</em><br>
-                <input class="inputs" type="email" name="mail" required><br>
+                <input type="email" name="mail" required><br>
                 <em>Comment:</em><br>
                 <textarea name="message" rows="10" cols="30" required></textarea><br><br>
                 <input class="submit" type="submit" value="Send">
