started off on modals

--- a/gallery.html
+++ b/gallery.html
@@ -55,6 +55,13 @@
     
     <div id="official-gallery"> </div>
 
+    <!-- The Modal -->
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img id="modal-content">
+  </div>
+  
+
     <footer>
         <div id="copyright">Copyright &copy; Iqbal Photography 2018</div> 
         <div class="footer-links">
